--- a/style.css
+++ b/style.css
@@ -25,3 +25,23 @@ ul {
 li {
     margin-bottom: 8px;
 }
+
+.header {
+    margin-bottom: 24px;
+}
+
+.header-top > * {
+    display: inline;
+}
+
+.header-top {
+    margin-bottom: 24px;
+}
+
+.header-bot {
+    display: flex;
+}
+
+.hello {
+    margin-right: auto;
+}
