--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
     padding: 0;
 }
 
+body {
+    color: white;
+    font-family: "Roboto", sans-serif;
+}
+
 .wrapper {
     display: grid;
     grid-template-columns: 1fr 4fr;
@@ -20,6 +25,7 @@ ul {
 
 .sidebar {
     padding: 12px;
+    background-color: #0f172a;
 }
 
 li {
@@ -28,6 +34,7 @@ li {
 
 .header {
     margin-bottom: 24px;
+    background-color: #94a3b8;
 }
 
 .header-top > * {
@@ -49,6 +56,13 @@ li {
 .cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 24px;
+}
+
+.cards > div,
+.announce > div,
+.trending > div {
+    background-color: #94a3b8;
 }
 
 .content {
@@ -58,4 +72,8 @@ li {
 
 .content-side {
     grid-column-start: 3;
+}
+
+.right-root {
+    background-color: #1e293b;
 }
