--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    color: white;
+    color: #f1f5f9;
     font-family: "Roboto", sans-serif;
 }
 
@@ -23,6 +23,10 @@ ul {
     margin-bottom: 32px;
 }
 
+ul {
+    list-style: none;
+}
+
 .sidebar {
     padding: 12px;
     background-color: #0f172a;
@@ -35,6 +39,7 @@ li {
 .header {
     margin-bottom: 24px;
     background-color: #94a3b8;
+    padding-left: 24px;
 }
 
 .header-top > * {
@@ -57,23 +62,42 @@ li {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 24px;
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
 }
 
 .cards > div,
 .announce > div,
 .trending > div {
     background-color: #94a3b8;
+    padding: 24px;
 }
 
 .content {
     display: grid;
-    grid-template-columns: 2fr 2f1;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 20px 4fr;
+    column-gap: 24px;
+    padding-left: 24px;
 }
+
+.two {
+    grid-column: 3 / 4;
+}  
 
 .content-side {
     grid-column-start: 3;
+    grid-row: 2 / 3;
 }
 
 .right-root {
     background-color: #1e293b;
+}
+
+.right-root > p {
+    padding-left: 24px;
+}
+
+.announce {
+    margin-bottom: 24px;
 }
